objects/Day_1_Template_GS__c.object
<CustomObject>
    <description>Attachment holder object for Day 1 template</description>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_1_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Day 1 Template</label>
        <referenceTo>Day_1_Template__c</referenceTo>
        <relationshipName>Day_1_Template_GS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot;+Attachment__c,&quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Day 1 Template Group Structure</label>
    <nameField>
        <label>Day 1 Template Group Structure Filename</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Day 1 Template Group Structure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>